# smartalloc-rs

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml
examples/: native.rs  orphan.rs  undetected.rs
smartalloc-sys/: Cargo.toml  README.md  build.rs
smartalloc-sys/csrc/: smartall.c  smartall.h
smartalloc-sys/src/: lib.rs
src/: lib.rs
